# dojo

./: .bumpversion.cfg  .dmc.sed  .dockerignore  .gitignore  .gitmodules  404.html  CNAME  Dockerfile.dev  Dockerfile.minio  FAQ.html  Makefile  README.md  ai-assistant.html  build-cato.sh  build-claudine.sh  build-phantom.sh  data-modeling.html  data-registration.html  dev-docs.html  docker-compose-images.yaml  docker-compose.airflow.yaml  docker-compose.api.yaml  docker-compose.build-override.yaml  docker-compose.dev.yaml  docker-compose.elastic.yaml  docker-compose.kibana.yaml  docker-compose.minio.yaml  docker-compose.network.yaml  docker-compose.override.yaml  docker-compose.phantom.yaml  docker-compose.redis.yaml  docker-compose.terminal.yaml  docker-compose.testmos.yaml  docker-compose.ui.yaml  docker-compose.worker.yaml  docker-compose.yaml  documents.html  dojo-api.html  env.template  envfile.sample  (+5 more)
.github/workflows/: api_unit_pytests.yml  build.yml  deploy.yml  go.yml  int_tests_cypress.yml  js.yml  test-deploy.yml  ui_build_bundle.yml  ui_component_tests_cypress.yml  ui_js_lint.yml  ui_unit_tests_jest.yml
api/: .build  .env  .gitignore  Dockerfile  README.md  conftest.py  dataset_annotate_template.template_csv  dataset_register_metadata_template.json  docker-compose.yaml  pytest.ini  requirements.txt  requirements_dev.txt  server.py
api/scripts/dart_documents/: README.md  pyproject.toml
api/scripts/dart_documents/dart_documents/: bert_search.py  dart_papers.py  search.py  upload_documents.py  upload_paragraphs_embeddings.py
api/scripts/elastic_ops/: .python-version  README.md  pyproject.toml
api/scripts/elastic_ops/copy_es_docs/: main.py
api/scripts/elastic_ops/get_analyst_tif_files/: .gitignore  main.py
api/scripts/elastic_ops/job_playground/: main.py
api/scripts/elastic_ops/mock_paragraphs/: main.py
api/scripts/elastic_ops/pop_didx_boxytas/: main.py
api/scripts/missing_datasets/: README.md  dojo_sync_republish.py  env.sample  pyproject.toml
api/scripts/missing_datasets/missing_datasets/: entrypoint.py
api/scripts/reindex_es_index/: README.md  pyproject.toml
api/scripts/reindex_es_index/src/: bulk_update.py  main.py  refresh.py
api/scripts/semantic_dataset_search/: README.md  pyproject.toml
api/scripts/semantic_dataset_search/semantic_work/: embedder_engine.py  populate_features_index.py  verify_missing_features.py
api/scripts/worldbank_upload_datasets/: .gitignore  README.md  pyproject.toml
api/scripts/worldbank_upload_datasets/wdi/: main.py
api/src/: db.py  (+28 more)
app/: package-lock.json  package.json  webpack.config.js
auth/: README-SSL.md  README.md  build.sh  docker-compose-export.yml  docker-compose-import.yml  docker-compose-init.yml  docker-compose-ssl.yml  docker-compose.yml  minica-key.pem  minica.pem
aws/: credentials
cato/: Dockerfile
clouseau/: .build  .bumpversion.cfg  Makefile  README.md  build-cato.sh
data-modeling/: aggregation-methods.html
data-registration/: data-format.html  geotemporal-format.html
details/: aggregation-methods.html  cheatsheet.html  data-format.html  docker.html  dojo-cli.html  excel.html  geotemporal-format.html  jupyter.html  large-files.html  matlab.html
dev-docs/: common-problems.html  developer-workflow.html  document-upload-architecture.html  environment-setup.html  knowledge-ui.html  make-and-docker-integration.html  production-deployment.html  publishing-models-datasets.md  stack-overview.html  whitelabeling.html
dmc/: Dockerfile  README.md  docker-compose.yaml
docs/: CNAME  README.md  docusaurus.config.js  package-lock.json  package.json  sidebars.js
dojo-docs/: README.md  docusaurus.config.js  sidebars.js
model-execution/: dojo-cli.html
model-registration/: cheatsheet.html  docker.html  excel.html  jupyter.html  large-files.html  matlab.html
perm-fixer/: Dockerfile  watch.sh
phantom/: .build  .gitignore  Dockerfile  Makefile  README.md  build-phantom.sh  default.conf  docker-compose.yaml
recommender/: Dockerfile  README.md  docker-compose.yaml  requirements.txt
router/: Caddyfile
sshd/: .dockerignore  Dockerfile  build-docker.sh  entrypoint.sh
tasks/: .build  .gitignore  Dockerfile  Dockerfile.datamodeling  Dockerfile.rag  README.md  docker-compose.yaml
terminal/: Dockerfile  README.md  docker-compose.yaml
testmos/: Dockerfile  docker-compose.yaml  main.py
ui/: .babelrc  .build  .eslintrc.js  .eslintrc.json  .gitignore  Dockerfile  Dockerfile.dev  Makefile  README.md  build-phantom.sh  build-ui.sh  cypress.config.js  docker-compose.yaml  package-lock.json  package.json  webpack.config.dev.js  webpack.config.js
video-howtos/: data-modeling.html  data-registration.html  documents-knowledge.html  model-registration.html
workers/: Dockerfile  docker-compose.yaml
(+794 files in other folders)
