[tool.poetry]
name = "dart-documents"
version = "0.1.0"
description = ""
authors = ["Joel and David <all@jataware.com>"]
readme = "README.md"
packages = [{include = "dart_documents"}]

[tool.poetry.dependencies]
python = "^3.10"
elasticsearch = "7.12.0"
sentence-transformers = "^2.2.2"
transformers = "^4.29.2"
torch = "^2.0.1"
tqdm = "^4.65.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
flake8 = "^6.0.0"
ipykernel = "^6.23.1"

[tool.poetry.scripts]
upload_documents = "dart_documents.upload_documents:index_all_documents"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
