[tool.poetry]
name = "elasticops"
version = "0.1.0"
description = "Rest of es helper scripts"
authors = ["joel <joel@jataware.com>"]
readme = "README.md"
packages = [{include = "copy_es_docs"}]

[tool.poetry.dependencies]
python = "^3.9"
elasticsearch = "7.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
