[tool.poetry]
name = "missing-datasets"
version = "0.1.0"
description = ""
authors = ["Mr. Joel"]
readme = "README.md"
packages = [{include = "missing_datasets"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.30.0"
python-dotenv = "^1.0.0"
dpath = "^2.1.5"

[tool.poetry.scripts]
main = "missing_datasets.entrypoint:main"
debug = "missing_datasets.entrypoint:save_list_csv"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"