[tool.poetry]
name = "reindex-es-index"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
elasticsearch = "7.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
