[tool.poetry]
name = "semantic-work"
version = "0.1.0"
description = ""
authors = ["Joel Quiles <joel@jataware.com>"]
readme = "README.md"
packages = [{include = "semantic_work"}]

[tool.poetry.dependencies]
python = "^3.10"
elasticsearch = "7.12.0"
# torch = "^2.0.1"
# sentence-transformers = "^2.2.2"
openai = {extras = ["embeddings"], version = "0.27.10"}
# openai = "0.27.10"
matplotlib = "^3.8.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
flake8 = "^6.0.0"
ipykernel = "^6.23.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
